--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btSearch"
+        android:id="@+id/btnSearch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -41,9 +41,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/btSearch"
-        app:layout_constraintStart_toStartOf="@+id/btSearch"
-        app:layout_constraintTop_toBottomOf="@+id/btSearch"
+        app:layout_constraintEnd_toEndOf="@+id/btnSearch"
+        app:layout_constraintStart_toStartOf="@+id/btnSearch"
+        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -56,7 +56,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/btSearch"
-        app:layout_constraintStart_toStartOf="@+id/btSearch"
+        app:layout_constraintEnd_toEndOf="@+id/btnSearch"
+        app:layout_constraintStart_toStartOf="@+id/btnSearch"
         app:layout_constraintTop_toBottomOf="@+id/ivPokemon" />
 </android.support.constraint.ConstraintLayout>
